[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "healing_pipeline"
version = "0.1.0"
description = "Self-Healing Automation Pipeline"
authors = [{name = "Prashant Shukla"}]
dependencies = [
    "requests",
    "loguru",
    "python-dotenv",
    "openai",
    "pydantic-settings",
    "click",
    "google-generativeai",
    "langchain",
    "langgraph",
    "langchain-google-genai"
]
requires-python = ">=3.10"

[project.scripts]
healing-run = "healing_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
